--- a/styles.css
+++ b/styles.css
@@ -1,59 +1,32 @@
-body {
-	font-family: Arial, sans-serif;
-	background-color: #f4f4f4;
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
-header {
-	background-color: #333;
-	color: #fff;
-	padding: 10px;
+@import url('https://fonts.googleapis.com/css2?family=Handjet:wght@200&display=swap');
+
+/* Style pour les titres de niveau 1 */
+h1 {
+    color: rgb(255, 0, 0); /* Couleur du texte en rouge */
+    text-align:  left; /* Alignement du texte au centre */
 }
 
-nav ul {
-	list-style-type: none;
-	margin: 0;
-	padding: 0;
+/* Style pour les titres de niveau 2 */
+h2 {
+    color: rgb(0, 0, 255); /* Couleur du texte en bleu */
+    text-align: center; /* Alignement du texte au centre */
 }
 
-nav ul li {
-	display: inline-block;
-	margin-right: 20px;
+h3 {
+    color: rgb(0, 255, 0); /* Couleur du texte en vert */
+    text-align: center; /* Alignement du texte au centre */
 }
 
-nav ul li a {
-	color: #fff;
-	text-decoration: none;
+section > p{
+
 }
 
-main {
-	max-width: 800px;
-	margin: 0 auto;
-	padding: 20px;
-}
-
-main section {
-	margin-bottom: 20px;
-}
-
-main h1, main h2, main h3 {
-	margin: 0;
-	margin-bottom: 10px;
-}
-
-main p {
-	margin: 0;
-	margin-bottom: 10px;
-}
-
-main a {
-	display: block;
-	background-color: #333;
-	color: #fff;
-	padding: 10px;
-	text-decoration: none;
-	margin-bottom: 10px;
-}
-
-main a:hover {
-	background-color: #555;
+section > #text1{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
